Fixed bug with min-height for page-wrapper that was causing the scrollbar to show when not necessary

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,6 +6,9 @@
 body
   background-color: #f3f3f4 !important
 
+#page-wrapper
+  min-height: 568px !important
+
 .profile-image-small
   width: 20px
   height: 20px
